--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,229 +1,107 @@
-<!DOCTYPE html>
-{% load static%}
-<html lang="ko">
+{% extends 'blog/base.html' %}
 
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
+{% block head_title %}
+  {{ post.title }}
+  | Blog
+{% endblock %}
 
-    <title>{{ post.title }}- Blog</title>
+{% block main_area %}
+  <div id="post-area">
+    <!-- Title -->
+    <h1 class="mt-4">{{ post.title }}</h1>
+    {% if post.hook_text %}
+      <h5 class="text-muted">{{post.hook_text}}</h5>
+    {% endif %}
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"/>
+    <!-- Author -->
+    <p class="lead">
+      by
+      <a href="#">작성자명 쓸 위치(개발예정)</a>
+    </p>
 
-    <!-- Custom styles for this template -->
-    <link href="{% static 'blog/css/blog-post.css' %}" rel="stylesheet"/>
-    <script src="https://kit.fontawesome.com/c85c5556f3.js"></script>
-  </head>
+    <hr/>
 
-  <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <!-- Date/Time -->
+    <p>Posted on
+      {{post.created_at}}</p>
 
-    <!-- Page Content -->
-    <div class="container">
-      <div class="row">
-        <!-- Post Content Column -->
-        <div class="col-lg-8" id="main-area">
-          <!-- Title -->
-          <h1 class="mt-4">{{ post.title }}</h1>
-          {% if post.hook_text %}
-            <h5 class="text-muted">{{post.hook_text}}</h5>
-          {% endif %}
+    <hr/>
 
-          <!-- Author -->
-          <p class="lead">
-            by
-            <a href="#">작성자명 쓸 위치(개발예정)</a>
-          </p>
+    <!-- Preview Image -->
+    {% if post.head_image %}
+      <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}"/>
+    {% else %}
+      <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" alt="{{post.title}}"/>
+      {%endif%}
+      <hr/>
 
-          <hr/>
+      <!-- Post Content -->
+      <p>{{ post.content}}</p>
 
-          <!-- Date/Time -->
-          <p>Posted on
-            {{post.created_at}}</p>
-
-          <hr/>
-
-          <!-- Preview Image -->
-          {% if post.head_image %}
-            <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}"/>
+      <!--파일 다운로드 버튼 생성-->
+      {% if post.file_upload %}
+        <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" roll="button" download="download">Download:
+          {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+            <i class="fa-regular fa-file-excel"></i>
+          {% elif post.get_file_ext == 'csv' %}
+            <i class="fa-regular fa-file-csv"></i>
+          {% elif post.get_file_ext == 'docx'%}
+            <i class="fa-regular fa-file-word"></i>
           {% else %}
-            <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" alt="{{post.title}}"/>
+            <i class="fa-regular fa-file"></i>
             {%endif%}
-            <hr/>
+            {{ post.get_file_name }}</a>
+          {%endif%}
 
-            <!-- Post Content -->
-            <p>{{ post.content}}</p>
+          <hr/>
+        </div>
 
-            <!--파일 다운로드 버튼 생성-->
-            {% if post.file_upload %}
-              <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" roll="button" download="download">Download:
-                {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
-                  <i class="fa-regular fa-file-excel"></i>
-                {% elif post.get_file_ext == 'csv' %}
-                  <i class="fa-regular fa-file-csv"></i>
-                {% elif post.get_file_ext == 'docx'%}
-                  <i class="fa-regular fa-file-word"></i>
-                {% else %}
-                  <i class="fa-regular fa-file"></i>
-                  {%endif%}
-                  {{ post.get_file_name }}</a>
-                {%endif%}
-
-                <hr/>
-
-                <!-- Comments Form -->
-                <div class="card my-4">
-                  <h5 class="card-header">Leave a Comment:</h5>
-                  <div class="card-body">
-                    <form>
-                      <div class="form-group">
-                        <textarea class="form-control" rows="3"></textarea>
-                      </div>
-                      <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                  </div>
+        <!-- Comments Form -->
+        <div id="commnet-area">
+          <div class="card my-4">
+            <h5 class="card-header">Leave a Comment:</h5>
+            <div class="card-body">
+              <form>
+                <div class="form-group">
+                  <textarea class="form-control" rows="3"></textarea>
                 </div>
-
-                <!-- Single Comment -->
-                <div class="media mb-4">
-                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
-                  <div class="media-body">
-                    <h5 class="mt-0">Commenter Name</h5>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                  </div>
-                </div>
-
-                <!-- Comment with nested comments -->
-                <div class="media mb-4">
-                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
-                  <div class="media-body">
-                    <h5 class="mt-0">Commenter Name</h5>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-                    <div class="media mt-4">
-                      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
-                      <div class="media-body">
-                        <h5 class="mt-0">Commenter Name</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                      </div>
-                    </div>
-
-                    <div class="media mt-4">
-                      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
-                      <div class="media-body">
-                        <h5 class="mt-0">Commenter Name</h5>
-                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Sidebar Widgets Column -->
-              <div class="col-md-4">
-                <!-- Search Widget -->
-                <div class="card my-4">
-                  <h5 class="card-header">Search</h5>
-                  <div class="card-body">
-                    <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search for..."/>
-                      <span class="input-group-append">
-                        <button class="btn btn-secondary" type="button">Go!</button>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Categories Widget -->
-                <div class="card my-4">
-                  <h5 class="card-header">Categories</h5>
-                  <div class="card-body">
-                    <div class="row">
-                      <div class="col-lg-6">
-                        <ul class="list-unstyled mb-0">
-                          <li>
-                            <a href="#">Web Design</a>
-                          </li>
-                          <li>
-                            <a href="#">HTML</a>
-                          </li>
-                          <li>
-                            <a href="#">Freebies</a>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="col-lg-6">
-                        <ul class="list-unstyled mb-0">
-                          <li>
-                            <a href="#">JavaScript</a>
-                          </li>
-                          <li>
-                            <a href="#">CSS</a>
-                          </li>
-                          <li>
-                            <a href="#">Tutorials</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Side Widget -->
-                <div class="card my-4">
-                  <h5 class="card-header">Side Widget</h5>
-                  <div class="card-body">
-                    You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
-                  </div>
-                </div>
-              </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
             </div>
-            <!-- /.row -->
           </div>
-          <!-- /.container -->
 
-          <!-- Footer -->
-          <footer class="py-5 bg-dark">
-            <div class="container">
-              <p class="m-0 text-center text-white">
-                Copyright &copy; Your Website 2020
-              </p>
+          <!-- Single Comment -->
+          <div class="media mb-4">
+            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+            <div class="media-body">
+              <h5 class="mt-0">Commenter Name</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
             </div>
-            <!-- /.container -->
-          </footer>
+          </div>
 
-          <!-- Bootstrap core JavaScript -->
-          <script src="vendor/jquery/jquery.min.js"></script>
-          <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        </body>
+          <!-- Comment with nested comments -->
+          <div class="media mb-4">
+            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+            <div class="media-body">
+              <h5 class="mt-0">Commenter Name</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
 
-      </html>
+              <div class="media mt-4">
+                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+                <div class="media-body">
+                  <h5 class="mt-0">Commenter Name</h5>
+                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                </div>
+              </div>
+
+              <div class="media mt-4">
+                <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+                <div class="media-body">
+                  <h5 class="mt-0">Commenter Name</h5>
+                  Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      {% endblock %}
