--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,203 +1,46 @@
-<!DOCTYPE html>
-{% load static%}
-<html lang="ko">
+{% extends 'blog/base.html' %}
 
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"/>
-    <title>Blog | Do It 장고 웹사이트</title>
-    <script src="https://kit.fontawesome.com/c85c5556f3.js"></script>
-    <!-- <link href=" {% static 'blog/bootstrap/style.css' %}"> -->
-  </head>
+{% block main_area %}
+  <h1>Blog</h1>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">Do It Django</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Home
-                <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./blog_list.html">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about_me.html">About me</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                Dropdown link
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-          </ul>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- Modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="logainModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="loginModal">
-              <i class="fa-solid fa-right-to-bracket"></i>
-              Log In
-            </h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="row">
-              <div class="col-md-6 col-sm-12">
-                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
-                  <i class="fa-brands fa-google"></i>
-                  Log in with Google
-                </button>
-                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
-                  <i class="fa-regular fa-user"></i>
-                  Log in with Username
-                </button>
-              </div>
-              <div class="col-md-6 col-sm-12">
-                <button type="button" class="btn btn-outline-dark btn-block btn-sm">
-                  <i class="fa-regular fa-envelope"></i>
-                  Sign up with E-mail
-                </button>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">
-              Close
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row my-3">
-        <div class="col-md-8 col-lg-9" id="main-area">
-          <h1>Blog</h1>
+  {%if post_list.exists %}
 
-          {%if post_list.exists %}
-            {% for p in post_list %}
-              <!-- Blog post-->
-              <div class="card mb-4">
-                {% if p.head_image %}
-                  <img class="card-img-top" src="{{ p.head_image.url}}" alt="{{p.title}}"/>
-                {%else %}
-                  <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" alt="{{p.title}}"/>
-                {% endif %}
-                <div class="card-body">
-                  <div class="small text-muted">January 1, 2023</div>
-                  <h2 class="card-title">{{p.title}}</h2>
-                  {% if p.hook_text %}
-                    <h5 class="text-muted">{{p.hook_text}}</h5>
-                  {% endif %}
-                  <p class="card-text">{{p.content | truncatewords:45}}</p>
-                  <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
-                </div>
-                <div class="card-footer text-muted">
-                  Posted on
-                  {{ p.created_at }}
-                  by
-                  <a href="#">작성자명 쓸 위치(개발예정)</a>
-                </div>
-              </div>
-            {% endfor %}
-          {% else %}
-            <h1>아직 게시물이 없습니다.</h1>
+    {% for p in post_list %}
+      <!-- Blog post-->
+      <div class="card mb-4">
+        {% if p.head_image %}
+          <img class="card-img-top" src="{{ p.head_image.url}}" alt="{{p.title}}"/>
+        {%else %}
+          <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" alt="{{p.title}}"/>
+        {% endif %}
+        <div class="card-body">
+          <div class="small text-muted">January 1, 2023</div>
+          <h2 class="card-title">{{p.title}}</h2>
+          {% if p.hook_text %}
+            <h5 class="text-muted">{{p.hook_text}}</h5>
           {% endif %}
-
-          <!-- Pagination-->
-          <ul class="pagination justify-content-center mb-4">
-            <li class="page-item">
-              <a class="page-link" href="#">&larr; Older</a>
-            </li>
-            <li class="page-item disabled">
-              <a class="page-link" href="#">Newer &rarr;</a>
-            </li>
-          </ul>
+          <p class="card-text">{{p.content | truncatewords:45}}</p>
+          <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
         </div>
-        <div class="col-md-4 col-lg-3">
-          <!-- Search widget-->
-          <div class="card mb-4">
-            <div class="card-header">Search</div>
-            <div class="card-body">
-              <div class="input-group">
-                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search"/>
-                <span class="input-group-append">
-                  <button class="btn btn-primary" id="button-search" type="button">
-                    Go!
-                  </button>
-                </span>
-              </div>
-            </div>
-          </div>
-          <!-- Categories widget-->
-          <div class="card mb-4">
-            <div class="card-header">Categories</div>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-sm-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#!">Web Design</a>
-                    </li>
-                    <li>
-                      <a href="#!">HTML</a>
-                    </li>
-                    <li>
-                      <a href="#!">Freebies</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-sm-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <a href="#!">JavaScript</a>
-                    </li>
-                    <li>
-                      <a href="#!">CSS</a>
-                    </li>
-                    <li>
-                      <a href="#!">Tutorials</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="card-footer text-muted">
+          Posted on
+          {{ p.created_at }}
+          by
+          <a href="#">작성자명 쓸 위치(개발예정)</a>
         </div>
       </div>
-    </div>
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">
-          Copyright &copy; Do IT Django 2023
-        </p>
-      </div>
-    </footer>
+    {% endfor %}
+  {% else %}
+    <h1>아직 게시물이 없습니다.</h1>
+  {% endif %}
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
-
-</html>
+  <!-- Pagination-->
+  <ul class="pagination justify-content-center mb-4">
+    <li class="page-item">
+      <a class="page-link" href="#">&larr; Older</a>
+    </li>
+    <li class="page-item disabled">
+      <a class="page-link" href="#">Newer &rarr;</a>
+    </li>
+  </ul>
+{% endblock %}
