--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,3 +1,4 @@
+{% load socialaccount %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="/">Do It Django</a>
@@ -15,21 +16,22 @@
         <li class="nav-item">
           <a class="nav-link" href="/about_me/">About me</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-            Dropdown link
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
       </ul>
       <ul class="navbar-nav ml-auto">
+        {% if user.is_authenticated %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+            {{ user.username }}
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/accounts/logout/">Log Out</a>
+          </div>
+        </li>
+        {% else %}
         <li class="nav-item">
           <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal">Log In</a>
         </li>
+        {% endif %}
       </ul>
     </div>
   </div>
@@ -50,10 +52,10 @@
       <div class="modal-body">
         <div class="row">
           <div class="col-md-6 col-sm-12">
-            <button type="button" class="btn btn-outline-dark btn-block btn-sm">
+            <a roll="button" href="{% provider_login_url 'google' %}" type="button" class="btn btn-outline-dark btn-block btn-sm">
               <i class="fa-brands fa-google"></i>
               Log in with Google
-            </button>
+            </a>
             <button type="button" class="btn btn-outline-dark btn-block btn-sm">
               <i class="fa-regular fa-user"></i>
               Log in with Username
