--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,121 +3,101 @@
 {% block head_title %}{{ post.title }}| Blog{% endblock %}
 
 {% block main_area %}
-  <div id="post-area">
-    {% if post.category %}
-      <span class="badge badge-secondary float-right">{{ post.category }}</span>
+<div id="post-area">
+  {% if post.category %}
+    <span class="badge badge-secondary float-right">{{ post.category }}</span>
+  {% else %}
+    <span class="badge badge-secondary float-right">미분류</span>
+  {% endif %}
+  
+  <!-- Title -->
+  <h1 class="mt-4">{{ post.title }}</h1>
+  {% if post.hook_text %}
+    <h5 class="text-muted">{{post.hook_text}}</h5>
+  {% endif %}
+
+  <!-- Author -->
+  <p class="lead">
+    by
+    <a href="#">{{ post.author | upper }}</a>
+  </p>
+
+  <hr/>
+  <!-- 수정버튼 -->
+  {% if user.is_authenticated and user == post.author %}
+    <a type="button" href="/blog/update_post/{{ post.pk }}" class="btn btn-dark btn-sm float-right"><i class="fa-solid fa-pencil"></i>&nbsp; Edit Post</a>
+  {% endif %}
+
+  <!-- Date/Time -->
+  <p>Posted on
+    {{post.created_at}}</p>
+
+  <hr/>
+
+  <!-- Preview Image -->
+  {% if post.head_image %}
+    <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}"/>
+  {% else %}
+    <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" alt="{{post.title}}"/>
+  {%endif%}
+  <hr/>
+
+  <!-- Post Content -->
+  <p>{{ post.get_content_markdown | safe }}</p>
+
+  <!--Tag Content-->
+  {% if post.tags.exists %}
+    <i class="fa-solid fa-tags"></i>
+    {% for tag in post.tags.iterator %}
+      <a href="{{ tag.get_absolute_url }}">
+        <span class="badge badge-light">{{ tag }}</span></a>
+    {% endfor %}
+    <br/><br/>
+  {% endif %}
+
+  <!--파일 다운로드 버튼 생성-->
+  {% if post.file_upload %}
+    <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" roll="button" download="download">Download:
+    {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
+      <i class="fa-regular fa-file-excel"></i>
+    {% elif post.get_file_ext == 'csv' %}
+      <i class="fa-regular fa-file-csv"></i>
+    {% elif post.get_file_ext == 'docx'%}
+      <i class="fa-regular fa-file-word"></i>
     {% else %}
-      <span class="badge badge-secondary float-right">미분류</span>
-      {% endif%}
-      <!-- Title -->
-      <h1 class="mt-4">{{ post.title }}</h1>
-      {% if post.hook_text %}
-        <h5 class="text-muted">{{post.hook_text}}</h5>
-      {% endif %}
+      <i class="fa-regular fa-file"></i>
+    {%endif%}
+    {{ post.get_file_name }}</a>
+  {%endif%}
 
-      <!-- Author -->
-      <p class="lead">
-        by
-        <a href="#">{{ post.author | upper }}</a>
-      </p>
+  <hr/>
+</div>
 
-      <hr/>
-      <!-- 수정버튼 -->
-      {% if user.is_authenticated and user == post.author %}
-        <a type="button" href="/blog/update_post/{{ post.pk }}" class="btn btn-dark btn-sm float-right"><i class="fa-solid fa-pencil"></i>&nbsp; Edit Post</a>
-      {% endif %}
-
-      <!-- Date/Time -->
-      <p>Posted on
-        {{post.created_at}}</p>
-
-      <hr/>
-
-      <!-- Preview Image -->
-      {% if post.head_image %}
-        <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }}"/>
-      {% else %}
-        <img class="card-img-top" src="https://picsum.photos/seed/{{p.id}}/600/200" alt="{{post.title}}"/>
-        {%endif%}
-        <hr/>
-
-        <!-- Post Content -->
-        <p>{{ post.get_content_markdown | safe }}</p>
-
-        <!--Tag Content-->
-        {% if post.tags.exists %}
-          <i class="fa-solid fa-tags"></i>
-          {% for tag in post.tags.iterator %}
-            <a href="{{ tag.get_absolute_url }}">
-              <span class="badge badge-light">{{ tag }}</span></a>
-          {% endfor %}
-          <br/><br/>
-        {% endif %}
-
-        <!--파일 다운로드 버튼 생성-->
-        {% if post.file_upload %}
-          <a href="{{ post.file_upload.url }}" type="button" class="btn btn-outline-dark" roll="button" download="download">Download:
-            {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
-              <i class="fa-regular fa-file-excel"></i>
-            {% elif post.get_file_ext == 'csv' %}
-              <i class="fa-regular fa-file-csv"></i>
-            {% elif post.get_file_ext == 'docx'%}
-              <i class="fa-regular fa-file-word"></i>
-            {% else %}
-              <i class="fa-regular fa-file"></i>
-              {%endif%}
-              {{ post.get_file_name }}</a>
-            {%endif%}
-
-            <hr/>
-          </div>
-
-          <!-- Comments Form -->
-          <div id="commnet-area">
-            <div class="card my-4">
-              <h5 class="card-header">Leave a Comment:</h5>
-              <div class="card-body">
-                <form>
-                  <div class="form-group">
-                    <textarea class="form-control" rows="3"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-              </div>
-            </div>
-
-            <!-- Single Comment -->
-            <div class="media mb-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-              </div>
-            </div>
-
-            <!-- Comment with nested comments -->
-            <div class="media mb-4">
-              <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
-              <div class="media-body">
-                <h5 class="mt-0">Commenter Name</h5>
-                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-
-                <div class="media mt-4">
-                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
-                  <div class="media-body">
-                    <h5 class="mt-0">Commenter Name</h5>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                  </div>
-                </div>
-
-                <div class="media mt-4">
-                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
-                  <div class="media-body">
-                    <h5 class="mt-0">Commenter Name</h5>
-                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        {% endblock %}
+<!-- Comments Form -->
+<div id="comment-area">
+  <div class="card my-4">
+    <h5 class="card-header">Leave a Comment:</h5>
+    <div class="card-body">
+      <form>
+        <div class="form-group">
+          <textarea class="form-control" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  </div>
+          
+  {% if post.comment_set.exists %}
+    {% for comment in post.comment_set.iterator %}
+    <!-- Single Comment -->
+    <div class="media mb-4" id="comment-{{ comment.pk }}">
+      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
+      <div class="media-body">
+        <h5 class="mt-0">{{ comment.author.username }} &nbsp; &nbsp; <small class="text-muted">{{ comment.created_at }}</small> </h5>
+        {{ comment.content | linebreaks }}
+      </div>
+    </div>
+    {% endfor %}
+  {% endif %}
+</div>
+{% endblock %}
