--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -99,8 +99,17 @@
     <div class="media mb-4" id="comment-{{ comment.pk }}">
       <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt=""/>
       <div class="media-body">
+        {% if user.is_authenticated and comment.author == user %}
+        <a class="btn btn-sm btn-info float-right" 
+          role="button" 
+          id="comment-{{ comment.pk }}-update-btn" 
+          href="/blog/update_comment/{{ comment.pk }}/">edit</a>
+        {% endif %}
         <h5 class="mt-0">{{ comment.author.username }} &nbsp; &nbsp; <small class="text-muted">{{ comment.created_at }}</small> </h5>
         {{ comment.content | linebreaks }}
+        {% if comment.is_updated %}
+          <p class="text-muted float-right">Updated: {{ comment.updated_at }}</p>
+        {% endif %}
       </div>
     </div>
     {% endfor %}
