--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -26,11 +26,9 @@
             <div class="card-header">Search</div>
             <div class="card-body">
               <div class="input-group">
-                <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search"/>
+                <input id="search-input" class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search"/>
                 <span class="input-group-append">
-                  <button class="btn btn-primary" id="button-search" type="button">
-                    Go!
-                  </button>
+                  <button class="btn btn-primary" id="button-search" type="button" onclick="searchPost();">Go!</button>
                 </span>
               </div>
             </div>
@@ -56,6 +54,25 @@
         </div>
       </div>
     </div>
+
+    <script>
+      function searchPost(){
+        let searchValue = document.getElementById('search-input').value.trim();
+        if (searchValue.length > 1) {
+          location.href="/blog/search/" + searchValue + "/";
+        }
+        else{
+          alert('검색어(' + searchValue +')가 너무 짧습니다.');
+        }
+      }
+
+      document.getElementById('search-input').addEventListener('keyup', function(event){
+        if (event.key == 'Enter'){
+          searchPost();
+        }
+      })
+    </script> 
+    
     {% include 'blog/footer.html' %}
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
