--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -1,19 +1,49 @@
 <!DOCTYPE html>
+{% load static%}
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YunJu의 웹페이지</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"/>
+  <script src="https://kit.fontawesome.com/c85c5556f3.js"></script>
+  <link href="{% static 'single_pages/css/landing.css' %}" rel="stylesheet" type="text/css"/>
+  <title>Do It Django Inflearn</title>
+</head>
 
-  <body>
-    <nav>
-      <a href="/blog/">Blog</a>
-      <a href="/about_me">About me</a>
-    </nav>
+<body>
+  {% include 'blog/navbar.html'%}
 
-    <h1>안녕하세요. 장고 개발 도전자입니다.</h1>
-    <h2>대문 페이지</h2>
-    <h3>아직 만드는 중입니다.</h3>
-  </body>
+  <section>
+    <div class="container">
+      <div class="row justify-content-between mt-4">
+        <div class="col-lg-6 text-light">
+          <h1>Do It! Django + Inflearn</h1>
+          <p>파이썬 진영의 가장 대표적인 웹 프레임워크 Django로 여러분의 블로그 사이트를 만들어보세요.</p>
+        </div>
+        <div class="col-lg-5">
+          <h2 class="text-light">Blog - Recent posts</h2>
+          {% for post in recent_posts %}
+          <div class="card mt-1">
+            <div class="card-body">
+              <h6><a href="{{ post.get_absolute_url }}" class="text-decoration-none text-dark">{{ post.title }}</a></h6>
+              <span class="badge badge-pill badge-light float-right">
+                <img class="mr-1 rounded-circle" width="20px" src="{{ post.get_avatar_url }}" alt="{{ post.author }}">
+                {{ post.author.username }}
+                &nbsp;&nbsp;
+                {{ post.created_at }}
+              </span>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <div class="fixed-bottom">
+  {% include 'blog/footer.html' %}
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
